--- a/rootfs/etc/lightdm/lightdm.conf
+++ b/rootfs/etc/lightdm/lightdm.conf
@@ -117,11 +117,11 @@ session-wrapper=/etc/lightdm/Xsession
 #session-setup-script=
 #session-cleanup-script=
 #autologin-guest=false
-#autologin-user=
-#autologin-user-timeout=0
+autologin-user=anon
+autologin-user-timeout=10
 #autologin-in-background=false
 #autologin-session=
-#exit-on-failure=false
+exit-on-failure=true
 
 #
 # XDMCP Server configuration
