--- a/isolinux/isolinux.cfg.in
+++ b/isolinux/isolinux.cfg.in
@@ -1,24 +1,21 @@
-UI vesamenu.c32
+SERIAL 0 115200
+UI menu.c32
 PROMPT 0
 TIMEOUT 100
 ONTIMEOUT linuxram
 
+MENU TITLE Welcome to the Electric Tantra Live, built on hrmpf & Void Linux
 MENU TABMSG Press ENTER to boot or TAB to edit a menu entry
 MENU AUTOBOOT BIOS default device boot in # second{,s}...
 MENU BACKGROUND @@SPLASHIMAGE@@
 MENU WIDTH 78
 MENU MARGIN 1
-MENU ROWS 4
+MENU ROWS 12
 MENU VSHIFT 2
-MENU TIMEOUTROW 8
-MENU TABMSGROW 2
-MENU CMDLINEROW 11
-MENU HELPMSGROW 16
-MENU HELPMSGENDROW 29
 
-MENU COLOR title        * #b2bfd9ff *
-MENU COLOR border       * #8b9cbeff #8b9cbeff  #8b9cbeff 
-MENU COLOR sel          * #f4f4f7ff #555e70ff *
+#MENU COLOR title        * #8b9cbeff *
+#MENU COLOR border       * #00000000 #00000000 none
+#MENU COLOR sel          * #ffffffff #8b9cbeff *
 
 LABEL linux
 MENU LABEL @@BOOT_TITLE@@ @@KERNVER@@ @@ARCH@@
@@ -28,6 +25,50 @@ LABEL linuxram
 MENU LABEL @@BOOT_TITLE@@ @@KERNVER@@ @@ARCH@@ (RAM)
 KERNEL /boot/vmlinuz
 APPEND initrd=/boot/initrd root=live:CDLABEL=VOID_LIVE init=/sbin/init ro rd.luks=0 rd.md=0 rd.dm=0 loglevel=4 vconsole.unicode=1 vconsole.keymap=@@KEYMAP@@ locale.LANG=@@LOCALE@@ @@BOOT_CMDLINE@@ rd.live.ram
+LABEL linuxtext
+MENU LABEL @@BOOT_TITLE@@ @@KERNVER@@ @@ARCH@@ (Text mode/Serial)
+KERNEL /boot/vmlinuz
+APPEND initrd=/boot/initrd root=live:CDLABEL=VOID_LIVE init=/sbin/init ro rd.luks=0 rd.md=0 rd.dm=0 loglevel=4 vconsole.unicode=1 vconsole.keymap=@@KEYMAP@@ locale.LANG=@@LOCALE@@ @@BOOT_CMDLINE@@ modprobe.blacklist=bochs_drm nomodeset console=tty0 console=ttyS0,115200n8
+LABEL linuxlts
+MENU LABEL @@BOOT_TITLE@@ @@LTSKVER@@ LTS @@ARCH@@
+KERNEL /boot/vmlinuz-lts
+APPEND initrd=/boot/initrd-lts root=live:CDLABEL=VOID_LIVE init=/sbin/init ro rd.luks=0 rd.md=0 rd.dm=0 loglevel=4 vconsole.unicode=1 vconsole.keymap=@@KEYMAP@@ locale.LANG=@@LOCALE@@ @@BOOT_CMDLINE@@
+LABEL linuxltsram
+MENU LABEL @@BOOT_TITLE@@ @@LTSKVER@@ LTS @@ARCH@@ (RAM)
+KERNEL /boot/vmlinuz-lts
+APPEND initrd=/boot/initrd-lts root=live:CDLABEL=VOID_LIVE init=/sbin/init ro rd.luks=0 rd.md=0 rd.dm=0 loglevel=4 vconsole.unicode=1 vconsole.keymap=@@KEYMAP@@ locale.LANG=@@LOCALE@@ @@BOOT_CMDLINE@@ rd.live.ram
+LABEL linuxltstext
+MENU LABEL @@BOOT_TITLE@@ @@LTSKVER@@ LTS @@ARCH@@ (Text mode/Serial)
+KERNEL /boot/vmlinuz-lts
+APPEND initrd=/boot/initrd-lts root=live:CDLABEL=VOID_LIVE init=/sbin/init ro rd.luks=0 rd.md=0 rd.dm=0 loglevel=4 vconsole.unicode=1 vconsole.keymap=@@KEYMAP@@ locale.LANG=@@LOCALE@@ @@BOOT_CMDLINE@@ modprobe.blacklist=bochs_drm nomodeset console=tty0 console=ttyS0,115200n8
+LABEL hdt
+MENU LABEL HDT (Hardware Detection Tool)
+KERNEL hdt.c32
+LABEL memtest86+
+MENU LABEL memtest86+ 5.01
+KERNEL memdisk
+INITRD /boot/memtest86+-5.01.iso
+APPEND iso
+LABEL mhdd32
+MENU LABEL MHDD32 v4.6 Hard Drive Analysis Tool
+KERNEL memdisk
+INITRD /boot/mhdd32ver4.6.iso
+APPEND iso
+LABEL ipxe
+MENU LABEL iPXE 1.21.1+
+KERNEL memdisk
+INITRD /boot/ipxe.iso
+APPEND iso
+LABEL balder
+MENU LABEL Balder10 FreeDOS
+KERNEL memdisk
+INITRD /boot/balder10.img
+APPEND raw
+LABEL grub
+MENU LABEL Bare GRUB 2
+KERNEL memdisk
+APPEND iso
+INITRD /boot/grub2.iso
 LABEL c
 MENU LABEL Boot first HD found by BIOS
 COM32 chain.c32
